--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "devDependencies": {
         "@zardoy/tsconfig": "^1.2.1",
         "@zardoy/xo-config": "^0.1.0",
+        "electron": "^13.2.1",
         "modify-json-file": "^1.1.0",
         "typescript": "^4.3.5",
         "xo": "^0.44.0"
     },
     "dependencies": {
-        "electron": "^13.2.1",
         "esbuild": "^0.12.22",
         "execa": "^5.1.1",
         "github-remote-info": "^1.0.2"
+    },
+    "peerDependencies": {
+        "electron": ">=10"
     }
 }
