--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "electron-esbuild",
     "version": "1.0.0",
-    "main": "index.js",
+    "main": "build/index.js",
+    "types": "build/index.d.ts",
     "repository": "https://github.com/zardoy/electron-esbuild.git",
     "author": "Vitaly Turovsky <vital2580@icloud.com>",
     "license": "MIT",
