--- a/package.json
+++ b/package.json
@@ -33,5 +33,14 @@
     },
     "peerDependencies": {
         "electron": ">=10"
+    },
+    "prettier": {
+        "semi": false,
+        "singleQuote": true,
+        "proseWrap": "never",
+        "tabWidth": 4,
+        "trailingComma": "all",
+        "arrowParens": "avoid",
+        "printWidth": 150
     }
 }
