--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "lint": "eslint src/**"
     },
     "devDependencies": {
+        "@types/node": "^18.0.0",
         "@zardoy/tsconfig": "^1.2.1",
         "electron": "^13.2.1",
         "eslint": "^8.18.0",
