--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
         "typescript": "^4.3.5"
     },
     "dependencies": {
+        "electron-is-dev": "^2.0.0",
+        "electron-run": "2.3.1",
         "esbuild": "^0.14.48",
         "execa": "^5.1.1",
         "github-remote-info": "^1.0.2",
-        "lilconfig": "^2.0.5"
+        "lilconfig": "^2.0.5",
+        "rambda": "^7.1.4"
     },
     "peerDependencies": {
         "electron": ">=10"
