fix: properly kill electron on terminal exit

--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
         "eslint": "^8.18.0",
         "eslint-config-zardoy": "^0.2.11",
         "modify-json-file": "^1.1.0",
-        "typescript": "^4.3.5"
+        "typescript": "^4.9.4"
     },
     "dependencies": {
         "electron-is-dev": "^2.0.0",
         "electron-run": "2.3.1",
         "esbuild": "^0.14.48",
         "execa": "^5.1.1",
+        "exit-hook": "^3.1.4",
         "github-remote-info": "^1.0.2",
         "lilconfig": "^2.0.5",
         "rambda": "^7.1.4"
