--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/node": "^18.0.0",
         "@zardoy/tsconfig": "^1.2.1",
         "electron": "^13.2.1",
+        "esbuild": "^0.16.9",
         "eslint": "^8.18.0",
         "eslint-config-zardoy": "^0.2.11",
         "modify-json-file": "^1.1.0",
@@ -30,7 +31,6 @@
     "dependencies": {
         "electron-is-dev": "^2.0.0",
         "electron-run": "2.3.1",
-        "esbuild": "^0.14.48",
         "execa": "^5.1.1",
         "exit-hook": "^3.1.4",
         "github-remote-info": "^1.0.2",
@@ -38,7 +38,8 @@
         "rambda": "^7.1.4"
     },
     "peerDependencies": {
-        "electron": ">=10"
+        "electron": ">=10",
+        "esbuild": "*"
     },
     "prettier": {
         "semi": false,
