--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "devDependencies": {
         "@types/node": "^18.0.0",
         "@zardoy/tsconfig": "^1.2.1",
-        "electron": "^13.2.1",
+        "electron": "^22.0.0",
         "esbuild": "^0.16.9",
         "eslint": "^8.18.0",
         "eslint-config-zardoy": "^0.2.11",
@@ -29,6 +29,7 @@
         "typescript": "^4.9.4"
     },
     "dependencies": {
+        "chalk": "^5.2.0",
         "electron-is-dev": "^2.0.0",
         "electron-run": "2.3.1",
         "execa": "^5.1.1",
